Fix vertical alignment of headerDivBody and headerDivImg

--- a/stylesheet/base-rf.css
+++ b/stylesheet/base-rf.css
@@ -116,6 +116,7 @@ header.index {
 	right: 0;
 	text-align: right;
 	margin: auto;
+	padding-top: 15px;
 }
 
 #headerTagline {
